--- a/en/index.html
+++ b/en/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlexPlek IQ - Premium Coworking Space in Beverwijk</title>
+    <title>FlexPlekIQ - Flexible Co-working Space in Beverwijk</title>
     <meta name="description" content="FlexPlek IQ offers premium coworking spaces in Beverwijk with flexible workspaces, private offices, and meeting rooms.">
     
     <!-- Favicon -->
-    <link rel="icon" href="../assets/img/favicon.ico">
+    <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.png">
+    <link rel="apple-touch-icon" href="../assets/img/favicon.png">
     
     <!-- CSS Files -->
     <link rel="stylesheet" href="../assets/css/reset.css">
@@ -283,7 +286,7 @@
                     </div>
                     <h3 class="card__title">Gym</h3>
                     <p class="card__text">
-                        FlexPlek IQ features an on-site gym with modern equipment, perfect for staying active. Renters can also connect with a certified personal trainer for customized workouts and fitness guidance, supporting a healthy and balanced lifestyle.
+                        Modern fitness space with state-of-the-art equipment, rented to an experienced personal trainer. Interested in a workout? Contact the personal trainer who manages this facility.
                     </p>
                     <a href="#booking" class="card__link">More Info</a>
                 </div>
@@ -380,10 +383,83 @@
             <h2 class="section__title">Book a Meeting Room</h2>
             <p class="section__subtitle">Easily schedule your meeting in our modern spaces</p>
             <div class="booking__container">
-                <!-- Calendly inline widget begin -->
-                <div class="calendly-inline-widget" data-url="https://calendly.com/flexplekiq/small-meeting-room-1-4-people?primary_color=4aba60" style="min-width:320px;height:700px;"></div>
-                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-                <!-- Calendly inline widget end -->
+                <div class="booking__rooms">
+                    <!-- Small Meeting Room 1 -->
+                    <div class="booking__room">
+                        <div class="booking__room-header">
+                            <div class="booking__room-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <h3 class="booking__room-title">Small Meeting Room 1</h3>
+                        </div>
+                        <div class="booking__room-details">
+                            <span class="booking__room-capacity"><i class="fas fa-user"></i> 1-4 people</span>
+                            <span class="booking__room-price">€12.50/hour</span>
+                        </div>
+                        <div class="booking__widget">
+                            <iframe src="https://flexplekiqt4g5.setmore.com/services/75dcbe6d-9499-47d3-b38e-3796abebec5c" 
+                                    style="width:100%;height:900px;border:none;" 
+                                    title="Book Small Meeting Room 1"></iframe>
+                        </div>
+                    </div>
+
+                    <!-- Small Meeting Room 2 -->
+                    <div class="booking__room">
+                        <div class="booking__room-header">
+                            <div class="booking__room-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <h3 class="booking__room-title">Small Meeting Room 2</h3>
+                        </div>
+                        <div class="booking__room-details">
+                            <span class="booking__room-capacity"><i class="fas fa-user"></i> 1-4 people</span>
+                            <span class="booking__room-price">€12.50/hour</span>
+                        </div>
+                        <div class="booking__widget">
+                            <iframe src="https://flexplekiqt4g5.setmore.com/services/d2e72add-495d-43de-bedf-88f27f8f1db1" 
+                                    style="width:100%;height:900px;border:none;" 
+                                    title="Book Small Meeting Room 2"></iframe>
+                        </div>
+                    </div>
+
+                    <!-- Small Meeting Room 3 -->
+                    <div class="booking__room">
+                        <div class="booking__room-header">
+                            <div class="booking__room-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <h3 class="booking__room-title">Small Meeting Room 3</h3>
+                        </div>
+                        <div class="booking__room-details">
+                            <span class="booking__room-capacity"><i class="fas fa-user"></i> 1-4 people</span>
+                            <span class="booking__room-price">€12.50/hour</span>
+                        </div>
+                        <div class="booking__widget">
+                            <iframe src="https://flexplekiqt4g5.setmore.com/services/d6c95e74-ddda-4c27-b0c5-18c4fa6cffef" 
+                                    style="width:100%;height:900px;border:none;" 
+                                    title="Book Small Meeting Room 3"></iframe>
+                        </div>
+                    </div>
+
+                    <!-- Large Meeting Room -->
+                    <div class="booking__room">
+                        <div class="booking__room-header">
+                            <div class="booking__room-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <h3 class="booking__room-title">Large Meeting Room</h3>
+                        </div>
+                        <div class="booking__room-details">
+                            <span class="booking__room-capacity"><i class="fas fa-user"></i> 5-16 people</span>
+                            <span class="booking__room-price">€19.50/hour</span>
+                        </div>
+                        <div class="booking__widget">
+                            <iframe src="https://flexplekiqt4g5.setmore.com/services/0e4b2fa3-7d7c-4cdc-a2db-fd585833ccc6" 
+                                    style="width:100%;height:900px;border:none;" 
+                                    title="Book Large Meeting Room"></iframe>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
