--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlexPlek IQ - Premium Coworking Space in Beverwijk</title>
+    <title>FlexPlekIQ - Flexible Co-working Space in Beverwijk</title>
     <meta name="description" content="FlexPlek IQ biedt premium coworking ruimtes in Beverwijk met flexibele werkplekken, privékantoren en vergaderruimtes.">
     
     <!-- Favicon -->
-    <link rel="icon" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png">
+    <link rel="apple-touch-icon" href="assets/img/favicon.png">
     
     <!-- CSS Files -->
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -284,7 +287,7 @@
                     </div>
                     <h3 class="card__title">Fitnessruimte</h3>
                     <p class="card__text">
-                        FlexPlek IQ heeft een fitnessruimte met moderne apparatuur, perfect om actief te blijven. Huurders kunnen ook contact opnemen met een gecertificeerde personal trainer voor aangepaste workouts en fitnessbegeleiding, ter ondersteuning van een gezonde en evenwichtige levensstijl.
+                        Moderne fitnessruimte met state-of-the-art apparatuur, verhuurd aan een ervaren personal trainer. Interesse in een workout? Neem contact op met de personal trainer die deze ruimte beheert.
                     </p>
                     <a href="#booking" class="card__link">Meer Info</a>
                 </div>
@@ -381,10 +384,99 @@
             <h2 class="section__title">Boek een Vergaderruimte</h2>
             <p class="section__subtitle">Plan eenvoudig je vergadering in onze moderne ruimtes</p>
             <div class="booking__container">
-                <!-- Calendly inline widget begin -->
-                <div class="calendly-inline-widget" data-url="https://calendly.com/flexplekiq/small-meeting-room-1-4-people?primary_color=4aba60" style="min-width:320px;height:700px;"></div>
-                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-                <!-- Calendly inline widget end -->
+                <div class="booking__rooms">
+                    <!-- Small Meeting Room 1 -->
+                    <div class="booking__room">
+                        <div class="booking__room-header">
+                            <div class="booking__room-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <h3 class="booking__room-title">Kleine Vergaderruimte 1</h3>
+                        </div>
+                        <div class="booking__room-details">
+                            <span class="booking__room-capacity"><i class="fas fa-user"></i> 1-4 personen</span>
+                            <span class="booking__room-price">€12,50/uur</span>
+                        </div>
+                        <div class="booking__invoice-notice">
+                            <i class="fas fa-file-invoice"></i> Na bevestiging sturen wij een factuur naar uw e-mailadres
+                        </div>
+                        <div class="booking__widget">
+                            <iframe src="https://flexplekiqt4g5.setmore.com/services/75dcbe6d-9499-47d3-b38e-3796abebec5c" 
+                                    style="width:100%;height:1200px;border:none;" 
+                                    title="Book Small Meeting Room 1">
+                            </iframe>
+                        </div>
+                    </div>
+
+                    <!-- Small Meeting Room 2 -->
+                    <div class="booking__room">
+                        <div class="booking__room-header">
+                            <div class="booking__room-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <h3 class="booking__room-title">Kleine Vergaderruimte 2</h3>
+                        </div>
+                        <div class="booking__room-details">
+                            <span class="booking__room-capacity"><i class="fas fa-user"></i> 1-4 personen</span>
+                            <span class="booking__room-price">€12,50/uur</span>
+                        </div>
+                        <div class="booking__invoice-notice">
+                            <i class="fas fa-file-invoice"></i> Na bevestiging sturen wij een factuur naar uw e-mailadres
+                        </div>
+                        <div class="booking__widget">
+                            <iframe src="https://flexplekiqt4g5.setmore.com/services/d2e72add-495d-43de-bedf-88f27f8f1db1" 
+                                    style="width:100%;height:1200px;border:none;" 
+                                    title="Book Small Meeting Room 2">
+                            </iframe>
+                        </div>
+                    </div>
+
+                    <!-- Small Meeting Room 3 -->
+                    <div class="booking__room">
+                        <div class="booking__room-header">
+                            <div class="booking__room-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <h3 class="booking__room-title">Kleine Vergaderruimte 3</h3>
+                        </div>
+                        <div class="booking__room-details">
+                            <span class="booking__room-capacity"><i class="fas fa-user"></i> 1-4 personen</span>
+                            <span class="booking__room-price">€12,50/uur</span>
+                        </div>
+                        <div class="booking__invoice-notice">
+                            <i class="fas fa-file-invoice"></i> Na bevestiging sturen wij een factuur naar uw e-mailadres
+                        </div>
+                        <div class="booking__widget">
+                            <iframe src="https://flexplekiqt4g5.setmore.com/services/d6c95e74-ddda-4c27-b0c5-18c4fa6cffef" 
+                                    style="width:100%;height:1200px;border:none;" 
+                                    title="Book Small Meeting Room 3">
+                            </iframe>
+                        </div>
+                    </div>
+
+                    <!-- Large Meeting Room -->
+                    <div class="booking__room">
+                        <div class="booking__room-header">
+                            <div class="booking__room-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <h3 class="booking__room-title">Grote Vergaderruimte</h3>
+                        </div>
+                        <div class="booking__room-details">
+                            <span class="booking__room-capacity"><i class="fas fa-user"></i> 5-8 personen</span>
+                            <span class="booking__room-price">€19,50/uur</span>
+                        </div>
+                        <div class="booking__invoice-notice">
+                            <i class="fas fa-file-invoice"></i> Na bevestiging sturen wij een factuur naar uw e-mailadres
+                        </div>
+                        <div class="booking__widget">
+                            <iframe src="https://flexplekiqt4g5.setmore.com/services/0e4b2fa3-7d7c-4cdc-a2db-fd585833ccc6" 
+                                    style="width:100%;height:1200px;border:none;" 
+                                    title="Book Large Meeting Room">
+                            </iframe>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
