--- a/en/index.html
+++ b/en/index.html
@@ -182,8 +182,8 @@
                             <li>Base cost per month: <strong>€2,200</strong></li>
                             <li>Revenue above this threshold is shared with members</li>
                             <li>The kickback percentage varies based on the total revenue</li>
-                            <li>The percentage is calculated as: ((new total - base cost) / base cost) × 100</li>
-                            <li>For example, with €3,300: ((3300 - 2200) / 2200) × 100 = 50%</li>
+                            <li>The percentage is calculated as: ((new total - base cost) / new total) × 100</li>
+                            <li>For example, with €3,300: ((3300 - 2200) / 3300) × 100 = 33.33%</li>
                             <li>Members receive <strong>50%</strong> of the excess amount</li>
                             <li>Distribution is calculated monthly</li>
                         </ul>
