--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                             <li>Basiskosten per maand: <strong>€2.200</strong></li>
                             <li>Inkomsten boven deze drempel worden gedeeld met leden</li>
                             <li>Het kickback percentage varieert op basis van de totale inkomsten</li>
-                            <li>Het percentage wordt berekend als: ((nieuw totaal - basiskosten) / basiskosten) × 100</li>
-                            <li>Bijvoorbeeld, met €3.300: ((3300 - 2200) / 2200) × 100 = 50%</li>
+                            <li>Het percentage wordt berekend als: ((nieuw totaal - basiskosten) / nieuw totaal) × 100</li>
+                            <li>Bijvoorbeeld, met €3.300: ((3300 - 2200) / 3300) × 100 = 33.33%</li>
                             <li>Leden ontvangen <strong>50%</strong> van het overtollige bedrag</li>
                             <li>Verdeling wordt maandelijks berekend</li>
                         </ul>
